﻿v9.8
-----


v9.7
-----
+ Added the ability to purchase custom gift cards for any amount over the minimum
+ Added support for additional currencies introduced by Valve
: Fixed a bug that caused platform icons not to show correctly in Firefox
: Fixed a bug with multiple key activations that resulted in an occasional error
: Fixed a bug in the options page formatting validation in Firefox
: Fixed a bug that caused wishlist sorts not to work correctly in some currencies
- Removed option to show wallet balance in header as this was added to Steam by Valve

v9.6
-----
+ Added the ability to activate multiple product codes at once to product activation page
: Improved compatibility with HTTPS Everywhere extension
: Fixed formatting of wishlist numbers on profile pages to match Valve's visual style
: Updated visual style of wishlist pages and made item names on wishlists clickable
: Fixed a bug where badge links on market listings weren't linking to the correct page
: Fixed a bug that caused wishlist reviews to be incorrect for games with no review data
- Removed market game list collapsing as this feature was added to Steam by Valve
- Removed ACRTAG app warning messages as this feature now applies universally to all apps

v9.5
-----
+ Added a link to logged-in users account dropdown to redeem keys from the Steam website
+ Added the amount of items sold in the last 24 hours to the market listing pages
+ Added a store page link to badge progress pages
+ Added price history support for Chrono.gg, Dreamgame, and Savemi stores
: Fixed a bug which caused some users "Sell" buttons to disappear when selecting items in inventory
: Fixed a bug that caused video resolution selection feature to be hidden
: Fixed a bug where package info buttons were malformed
: Fixed a bug that caused the "Get Help" buttons not to direct users to the correct support website
: Fixed a bug that caused "Not Interested" highlighting not to work correctly on activity pages