@@ -3319,6 +3319,33 @@ function change_wishlist_format() {
 	});
 }
 
+function add_wishlist_hover() {
+	$('head').append('<link rel="stylesheet" href="' + protocol + '//store.akamai.steamstatic.com/public/css/v6/store.css" type="text/css" />');
+	var hover_div = $("\t\t<div class=\"hover game_hover\" id=\"global_hover\" style=\"display: none; left: 0px; top: 0;\">\r\n\t\t\t<div class=\"game_hover_box hover_box\">\r\n\t\t\t\t<div class=\"content\" id=\"global_hover_content\">\r\n\t\t\t\t<\/div>\r\n\t\t\t<\/div>\r\n\t\t\t<div class=\"hover_arrow_left\" style=\"left: 6px;\"><\/div>\r\n\t\t\t<\/div>");
+	$(document.body).append( hover_div );
+	$(".wishlistRow").hover(function() {
+		var id = $(this).attr("id").replace("game_", "");
+		var top = $(this).position().top + 208;
+		var left = $("#wishlist_items").offset().left + 932;
+		if ($("#hover_app_" + id).length > 0) {
+			hover_div.find( '.content' ).children().hide();
+			hover_div.css("top", top).css("left", left);
+			$("#hover_app_" + id).show();
+			hover_div.show();
+		} else {
+			$.get(protocol + '//store.steampowered.com/apphover/' + id + "&pagev6=true").done(function(html) {
+				var content = $(html);
+				hover_div.find( '.content' ).children().hide();
+				hover_div.find( '.content' ).append( content );
+				hover_div.css("top", top).css("left", left);
+				hover_div.show();
+			});
+		}
+	}, function() {
+		hover_div.hide();
+	});
+}
+
 // TODO: Cache this data, but only the required entries! Store the data combined in one row
 // but update apps individually based on "release_date.coming_soon". Unreleased apps will be
 // updated at least once a day while others can be updated once a week. If more than three
@@ -9180,6 +9207,7 @@ $(document).ready(function(){
 					switch (true) {
 						case /^\/(?:id|profiles)\/.+\/wishlist/.test(path):
 							change_wishlist_format();
+							add_wishlist_hover();
 							alternative_linux_icon();
 							appdata_on_wishlist();
 							wishlist_highlight_apps();
